Add money, Cash Out & Transaction features added with validation

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="divider"></div>
                     <!--! Add Money Form Start -->
-                    <div id="add-money-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <div id="add-money-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
@@ -46,8 +46,8 @@
                                 <label class="label">
                                     <span class="label-text">Enter your Pin Number</span>
                                 </label>
-                                <input id="input-pin-number" type="password" placeholder="Enter Your Pin" autocomplete="off"
-                                    class="input input-bordered" required />
+                                <input id="input-pin-number" type="password" placeholder="Enter Your Pin"
+                                    autocomplete="off" class="input input-bordered" required />
                             </div>
                             <div class="form-control mt-6">
                                 <button id="btn-add-money-submit" class="btn btn-primary">Add Money</button>
@@ -56,8 +56,8 @@
                     </div>
                     <!--! Add Money Form End -->
 
-                       <!--! Cash Out Form Start -->
-                       <div id="cash-out-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <!--! Cash Out Form Start -->
+                    <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                             <div class="form-control">
                                 <label class="label">
@@ -70,8 +70,8 @@
                                 <label class="label">
                                     <span class="label-text">Enter your Pin Number</span>
                                 </label>
-                                <input id="input-cash-out-pin" type="password" placeholder="Enter Your Pin" autocomplete="off"
-                                    class="input input-bordered" required />
+                                <input id="input-cash-out-pin" type="password" placeholder="Enter Your Pin"
+                                    autocomplete="off" class="input input-bordered" required />
                             </div>
                             <div class="form-control mt-6">
                                 <button id="btn-cash-out-submit" class="btn btn-primary">Cash Out</button>
@@ -82,9 +82,13 @@
 
                     <!-- ! Transaction Start -->
 
-                    <div id="transaction-section">
+                    <div id="transaction-section" class="hidden">
                         <h2 class="text-center text-3xl">Transaction History</h2>
+                        <div id="transaction-container">
+
+                        </div>
                     </div>
+                    
                     <!-- ! Transaction End -->
 
 
